sandbox/output
GildedRoseTest.java:51: error: ';' expected
    public void testBackstagePassesBetween5And10() {
                                                ^
GildedRoseTest.java:59: error: reached end of file while parsing
}
 ^
2 errors
